# mu

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  index.html  vcpkg.json
.github/workflows/: build.yml  docs.yml  format.yml  on_pull_request.yml  on_push_main.yml
docs/: Doxyfile  DoxygenLayout.xml
docs/user/: README.md  quantities.md  rep.md  units.md
example/: CMakeLists.txt
include/mu/: format_options.hpp  mu.hpp  npow.hpp  pow.hpp  quantity.hpp  rep.hpp  stream.hpp  unit_references.hpp  units.hpp  units_conversion.hpp
include/mu/detail/: analysis.hpp  compute_pow.hpp  concrete_factor.hpp  factor.hpp  primes.hpp  ratio.hpp  std_ratio.hpp  symbols.hpp  to_string.hpp  unit_string.hpp
include/mu/units/: si_prefixes.hpp  si_units.hpp
main/: analysis_8hpp_source.html  annotated.html  classes.html  classmu_1_1detail_1_1concrete__factor__generator.html  classmu_1_1detail_1_1concrete__factor__generator_3_01mult_3_01Factors_8_8_8_01_4_01_4-members.html  classmu_1_1detail_1_1concrete__factor__generator_3_01mult_3_01Factors_8_8_8_01_4_01_4.html  classmu_1_1detail_1_1unit__string-members.html  classmu_1_1detail_1_1unit__string.html  classmu_1_1quantity-members.html  classmu_1_1quantity.html  classmu_1_1stream_1_1format-members.html  classmu_1_1stream_1_1format.html  classmu_1_1stream_1_1labels-members.html  classmu_1_1stream_1_1labels.html  classmu_1_1stream_1_1mult__sep-members.html  classmu_1_1stream_1_1mult__sep.html  compute__pow_8hpp_source.html  conceptmu_1_1base__rep.html  conceptmu_1_1detail_1_1base__constant.html  conceptmu_1_1detail_1_1base__unit.html  conceptmu_1_1detail_1_1brace__convertible__to.html  conceptmu_1_1detail_1_1composite__constant.html  conceptmu_1_1detail_1_1composite__unit.html  conceptmu_1_1detail_1_1factor.html  conceptmu_1_1detail_1_1floating__point__rep.html  conceptmu_1_1detail_1_1has__name.html  conceptmu_1_1detail_1_1has__prefix.html  conceptmu_1_1detail_1_1has__symbol.html  conceptmu_1_1detail_1_1has__units.html  conceptmu_1_1detail_1_1has__value.html  conceptmu_1_1detail_1_1int__fits__in__float.html  conceptmu_1_1quantity__lossily__convertible__to.html  conceptmu_1_1quantity__lossily__equivalent__to.html  conceptmu_1_1quantity__lossily__scalable__to.html  conceptmu_1_1quantity__losslessly__convertible__to.html  conceptmu_1_1quantity__losslessly__equivalent__to.html  conceptmu_1_1quantity__losslessly__scalable__to.html  conceptmu_1_1quantity__only__lossily__convertible__to.html  conceptmu_1_1rep.html  conceptmu_1_1rep__addable.html  (+392 more)
main/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+32 more)
pkg/: CMakeLists.txt  cmake_package_config.cmake.in
scripts/: code_format.cmake  install_tools_apt.sh  install_tools_brew.sh
src/: CMakeLists.txt
src/mymath/: CMakeLists.txt  mymath.cpp
src/mymath/include/public/: mymath.hpp
test/: CMakeLists.txt  analysis_test.cpp  compute_pow_test.cpp  concrete_factor_test.cpp  factor_test.cpp  mu_test.cpp  mu_test.hpp  primes_test.cpp  quantity_test.cpp  rep_test.cpp  si_units_test.cpp  stream_test.cpp  unit_string_test.cpp  units_conversion_test.cpp  units_test.cpp
test/mymath_test/: CMakeLists.txt  mymath_test.cpp
